# platform.core.multimedia.libmm-utility

./: AUTHORS  LICENSE  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
TC/: build.sh  execute.sh  tet_scen  tetbuild.cfg  tetclean.cfg  tetexec.cfg  tslist.txt
TC/utc/: Makefile  tslist  utc_mm_util_common.h  utc_mm_util_convert_colorspace_func.c  utc_mm_util_decode_from_jpeg_file_func.c  utc_mm_util_decode_from_jpeg_memory_func.c  utc_mm_util_get_image_size_func.c  utc_mm_util_jpeg_encode_to_file_func.c  utc_mm_util_jpeg_encode_to_memory_func.c  utc_mm_util_resize_image_func.c  utc_mm_util_rotate_image_func.c
bmp/: Makefile.am  mm_util_bmp.c  mmutil-bmp.pc.in
bmp/include/: mm_util_bmp.h
bmp/test/: Makefile.am  mm_util_bmp_testsuite.c
debian/: changelog  control  copyright  libmm-utility-dev.install.in  rules
gif/: Makefile.am  mm_util_gif.c  mmutil-gif.pc.in
gif/include/: mm_util_gif.h
gif/test/: Makefile.am  mm_util_gif_testsuite.c
imgcv/: Makefile.am  mm_util_imgcv.c  mmutil-imgcv.pc.in
imgcv/include/: mm_util_imgcv.h  mm_util_imgcv_internal.h
imgcv/test/: Makefile.am  mm_util_imgcv_testsuite.c
imgp/: Makefile.am  mm_util_imgp.c  mmutil-imgp.pc.in
imgp/include/: mm_util_debug.h  mm_util_imgp.h  mm_util_imgp_internal.h
imgp/test/: Makefile.am  mm_util_imgp_testsuite.c
jpeg/: Makefile.am  mm_util_jpeg.c  mmutil-jpeg.pc.in
jpeg/include/: mm_util_jpeg.h
jpeg/test/: Makefile.am  mm_util_jpeg_testsuite.c
packaging/: libmm-utility.spec
png/: Makefile.am  mm_util_png.c  mmutil-png.pc.in
png/include/: mm_util_png.h
png/test/: Makefile.am  mm_util_png_testsuite.c
test/: Makefile.am  mm_utility_testsuite.c
